Set version and minVersion from original config.json at build time

--- a/docker_files/etc/confd/templates/config.json.tmpl
+++ b/docker_files/etc/confd/templates/config.json.tmpl
@@ -2,8 +2,8 @@
 	"wsPort": {{getv "/lisk/wsport" "8001"}},
 	"httpPort": {{getv "/lisk/httpport" "8000"}},
 	"address": "{{getv "/lisk/address" "0.0.0.0"}}",
-	"version": "{{getenv "LISK_VERSION"}}",
-	"minVersion": "{{getenv "LISK_MIN_VERSION"}}",
+	"version": "__LISK_VERSION__REPLACE_ME__",
+	"minVersion": "__LISK_MIN_VERSION__REPLACE_ME__",
 	"fileLogLevel": "{{getv "/lisk/fileloglevel" "info"}}",
 	"logFileName": "{{getv "/lisk/logfilename" "logs/lisk.log"}}",
 	"consoleLogLevel": "{{getv "/lisk/consoleloglevel" "error"}}",
