Update template's forging section
- add .forging.defaultPassword
- rename .forging.delegates[].encryptedSecret to
  .forging.delegates[].encryptedPassphrase

--- a/docker_files/etc/confd/templates/config.json.tmpl
+++ b/docker_files/etc/confd/templates/config.json.tmpl
@@ -114,9 +114,10 @@
 	},
 	"forging": {
 		"force": {{getv "/lisk/forging/force" "false"}},
+		"defaultPassword": "{{getv "/lisk/forging/defaultpassword" ""}}",
 		"delegates": [{{range $index, $element := (getvs "/lisk/forging/delegates/*")}}{{$data := split $element ":"}}{{if $index}}, {{end}}
 		{
-			"encryptedSecret": "{{index $data 0}}",
+			"encryptedPassphrase": "{{index $data 0}}",
 			"publicKey": "{{index $data 1}}"
 		}{{end}}],
 		"access": {
