:recycle: Reorganize browser tests for lisk-api-client

--- a/.babelrc.tmpl
+++ b/.babelrc.tmpl
@@ -1,8 +1,6 @@
 {
 	"presets": ["env"],
-	"plugins": [
-		"transform-runtime"
-	],
+	"plugins": ["transform-runtime"],
 	"env": {
 		"test": {
 			"plugins": ["istanbul"]
