change pr reviews

--- a/.eslintignore.tmpl
+++ b/.eslintignore.tmpl
@@ -4,5 +4,15 @@ docs/
 dist/
 dist-node/
 dist-browser/
+
+# browser tests
+browsertest/src/
+browsertest/test/
 browsertest/browsertest.js
 browsertest/browsertest.min.js
+
+# cypress media
+cypress/screenshots/
+cypress/videos/
+cypress/plugins/
+cypress/support/
