Apply PR change requests

--- a/.babelrc.tmpl
+++ b/.babelrc.tmpl
@@ -4,6 +4,16 @@
 	"env": {
 		"test": {
 			"plugins": ["istanbul"]
+		},
+		"buildcheck": {
+			"plugins": [
+				[
+					"module-resolver",
+					{
+						"root": ["./dist-node"]
+					}
+				]
+			]
 		}
 	}
 }
