:recycle: reorganize symlink structure & scripts for all packages

--- a/templates/.eslintignore.tmpl
+++ b/templates/.eslintignore.tmpl
@@ -6,10 +6,7 @@ dist-node/
 dist-browser/
 
 # browser tests
-browsertest/src/
-browsertest/test/
-browsertest/browsertest.js
-browsertest/browsertest.min.js
+browsertest.build/
 
 # cypress media
 cypress/screenshots/
