--- a/templates/browsertest.tmpl/browsertest.min.html
+++ b/templates/browsertest.tmpl/browsertest.min.html
@@ -17,7 +17,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.min.js"></script>
 	<script src="./setup.js"></script>
-	<script src="./browsertest.min.js"></script>
+	<script src="../browsertest.build/browsertest.min.js"></script>
 	<script src="./run_tests.js"></script>
 
 </body>
