--- a/templates/.prettierignore.tmpl
+++ b/templates/.prettierignore.tmpl
@@ -2,7 +2,9 @@ package.json
 
 .nyc_output/
 coverage/
-dist/
+dist-node/
+dist-browser/
+browsertest.build/
 node_modules/
 
 # BUG: See https://github.com/prettier/prettier/issues/3223
